--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:th = "http://thymeleaf.org">
+<html xmlns:th="http://thymeleaf.org">
 <head>
-	<title>Welcome</title>
-	<script type ="text/javascript" src= "/js/welcome.js"></script>  
+<title>Welcome</title>
+<script type="text/javascript" src="/js/welcome.js"></script>
+
 </head>
 <body>
-<h1>Join A Channel</h1>	
-	
+	<h1 style="color: green">Join A Channel</h1>
+
 	<div>
-			<tr th:each = "channel:${channels}"> 
+		<tr th:each="channel:${channels}">
 			<div>
-				<a th:href = "@{/channels/{channelId}(channelId=${channel.channelId})}">[[${channel.name}]]</a>
+				<a th:href="@{/channels/{channelId}(channelId=${channel.channelId})}">[[${channel.name}]]</a>
 			</div>
-			
-				
-			</tr>
+		</tr>
 	</div>
+
 	<div>
-	<a th:href = "createChannel">Create New Channel</a>
+		<a th:href="createChannel">Create New Channel</a>
 	</div>
-	
-	<script type="text/javascript" src = "/js/welcome.js"></script>
-	
 </body>
+
 </html>
