--- a/src/main/resources/templates/createChannel.html
+++ b/src/main/resources/templates/createChannel.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th = "http://thymeleaf.org">
-	<head>
-		<Title>Create New Chatroom</Title>
-		
-	</head>
-	<body>
-		<form action = "" method = "post">
-			<div>
-				<label>Name of New Chatroom</label>
-				<input type = "text" th:field = "${channel.name}"/>
-			</div>
-			
-			<button>Create Chatroom</button>
-		
-		
-		</form>
-		<a th:href = "welcome">Go Back</a>
-	</body>
+<html xmlns:th="http://thymeleaf.org">
+<head>
+<Title>Create New Chatroom</Title>
+
+</head>
+<body>
+	<form action="" method="post">
+		<div>
+			<label>Name of New Chatroom</label> <input type="text" th:field="${channel.name}" />
+		</div>
+
+		<button style="background-color: palegreen">Create Chatroom</button>
+	</form>
+	<a th:href="welcome">Go Back</a>
+</body>
+
 </html>
